# bearhacks-2026

./: .gitignore  README.md
data/: via_delays.sqlite
extension/: env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  via-content.content.ts
extension/entrypoints/popup/: index.html  main.ts
extension/lib/: api.ts  badge.ts  parser.ts  severity.ts
infra/: .env.example  docker-compose.yml
infra/snowflake/: 001_raw.sql  002_staging.sql  003_mart.sql  010_notebook_train_model.sql
infra/snowflake/notebooks/: train_delay_model_notebook.py
infra/snowflake/procs/: train_model_sp.py
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: smoke_test.py
services/common/: pyproject.toml
services/common/via_common/: __init__.py  auth0_vault.py  config.py  features.py  routes.py  schemas.py  storage.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: main.py
services/ingestion/app/jobs/: scheduler.py
services/ingestion/app/routers/: admin.py  jobs.py  scrape.py  vault.py
services/ingestion/app/scrapers/: transitdocs.py  via_live.py
services/prediction/: Dockerfile  pyproject.toml
services/prediction/app/: main.py  model_loader.py
services/prediction/app/routers/: predict.py
services/training/: Dockerfile  pyproject.toml
services/training/app/: main.py
services/training/app/pipelines/: train_model.py
services/training/app/routers/: train.py
