[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "via-common"
version = "0.1.0"
description = "Shared library for VIA Delay Oracle services"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-dateutil>=2.8",
  "pandas>=2.1",
  "snowflake-connector-python[pandas]>=3.7",
  "snowflake-sqlalchemy>=1.5",
  "sqlalchemy>=2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["via_common*"]
