[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "via-ingestion"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "python-dateutil>=2.8",
  "pyjwt[crypto]>=2.10",
  "via-common"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
